<?xml version="1.0"?>
<package format="2">
  <name>event_based_rgbd_ros_driver</name>
  <version>0.0.1</version>
  <description>Event-based RGBD ROS publisher and viewer</description>

  <maintainer email="ehsan.marjani@polymtl.ca">Seyed Ehsan Marjani Bajestani</maintainer>
  <author email="ehsan.marjani@polymtl.ca">Seyed Ehsan Marjani Bajestani</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>event_based_rgbd_ros_msgs</depend>
  <depend>event_based_rgbd_ros_srvs</depend>


  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>
