<?xml version="1.0"?>
<package format="2">
  <name>event_based_rgbd_ros_srvs</name>
  <version>0.0.1</version>
  <description>Event-based RGBD ROS wrapper message package</description>

  <maintainer email="ehsan.marjani@polymtl.ca">Seyed Ehsan Marjani Bajestani</maintainer>
  <author email="ehsan.marjani@polymtl.ca">Seyed Ehsan Marjani Bajestani</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
